fix(s17): preserve deterministic source snapshot order